5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1594_2043.log
== TEST (2019-06-25 22:12:13) 
-- CODE:
a=float(input('digite'))
b=float(input('digit'))
c=float(input('digite'))
d=float(input('digit'))
x=a*1 +b*2 + c*4 + d*4
y=1+2+3+4
m=x/y
print(m)
-- OUTPUT:
8.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:12:39) 
-- CODE:
a=float(input('digite'))
b=float(input('digit'))
c=float(input('digite'))
d=float(input('digit'))
x=a*1 +b*2 + c*3 + d*4
y=1+2+3+4
m=x/y
print(m)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:13:00) 
-- CODE:
a=float(input('digite'))
b=float(input('digit'))
c=float(input('digite'))
d=float(input('digit'))
x=a*1 +b*2 + c*3 + d*4
y=1+2+3+4
m=x/y
print(m)
-- EXECUTION TIME:
0.925327
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:13:24) 
-- CODE:
a=float(input('digite'))
b=float(input('digit'))
c=float(input('digite'))
d=float(input('digit'))
x=a*1 +b*2 + c*3 + d*4
y=1+2+3+4
m=x/y
print(round(m,2)
-- EXECUTION TIME:
0.734535
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 9
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 22:13:33) 
-- CODE:
a=float(input('digite'))
b=float(input('digit'))
c=float(input('digite'))
d=float(input('digit'))
x=a*1 +b*2 + c*3 + d*4
y=1+2+3+4
m=x/y
print(round(m,2))
-- EXECUTION TIME:
0.803233
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
